import util.FileIO;
import util.TextUI;
import java.util.ArrayList;


public class Main {
    public static void main(String[] args) {
        Chill chill = new Chill();
        chill.startSequence("Welcome!");



    }
}


